# actix-sea-orm

./: .env  Cargo.toml  Makefile  README.md  docker-compose.yml
entity/: Cargo.toml
entity/src/: posts.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250629_101604_create_post_table.rs
seeder/: Cargo.toml
seeder/src/: lib.rs  m20250629_102701_post_seeder.rs
src/: lib.rs  main.rs  routes.rs
src/configs/: app.rs  cors.rs  env.rs  mod.rs
src/db/: mysql.rs
src/errors/: handlers.rs
src/modules/: mod.rs
src/modules/post/: handlers.rs  routes.rs
src/modules/qr/: handlers.rs  routes.rs
src/qr/: handlers.rs  routes.rs
src/static/css/: skeleton.css
src/templates/: 404.html.tera  500.html.tera  edit.html.tera  index.html.tera  layout.html.tera  new.html.tera
